NT-211 attempt to fix submenu overlay issues on IE7, originally from Al, modified by lazyboy
git-svn-id: http://sipxecs.sipfoundry.org/rep/sipXecs/main@10192 ab1d8caa-1f67-47f1-9e81-24633a41865c

--- a/sipXconfig/web/src/org/sipfoundry/sipxconfig/site/skin/ie7-hacks.css
+++ b/sipXconfig/web/src/org/sipfoundry/sipxconfig/site/skin/ie7-hacks.css
@@ -1,10 +1,12 @@
 #navigation li ul {
-	/* top and left are for IE only */
 	top: 2em;
 	left: 0em;
 }
 
-#navigation li {
-	/* IE explorer only - working around Z-index bug */
+div#navigation < ul < li {
     _z-index: 500;
+}
+
+div#navigation < ul < li < ul < li  {
+    _z-index: 600;
 }
